--- a/PartyMaker/Base.lproj/Main.storyboard
+++ b/PartyMaker/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jq1-Zj-42t">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jq1-Zj-42t">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -25,6 +25,8 @@
             <string>MyriadPro-Bold</string>
         </mutableArray>
         <mutableArray key="MyriadProRegular.ttf">
+            <string>MyriadPro-Regular</string>
+            <string>MyriadPro-Regular</string>
             <string>MyriadPro-Regular</string>
             <string>MyriadPro-Regular</string>
             <string>MyriadPro-Regular</string>
@@ -326,7 +328,7 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" tableViewCell="IIp-5o-i9w" id="5sJ-9O-niX">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="69.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="69"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YR3-Nh-pcn">
@@ -336,19 +338,28 @@
                                                 <constraint firstAttribute="height" constant="54" id="OLa-9m-tCL"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kNG-q0-f6e">
-                                            <rect key="frame" x="72" y="42" width="207" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kNG-q0-f6e">
+                                            <rect key="frame" x="72" y="49" width="207" height="18"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="18" id="J5O-pu-fcy"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
-                                            <color key="textColor" red="0.38431372549019605" green="0.41176470588235292" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                            <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="14"/>
+                                            <color key="textColor" red="0.53725490196078429" green="0.5725490196078431" blue="0.65098039215686276" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jZ5-Zu-GPo">
-                                            <rect key="frame" x="72" y="16" width="205" height="18"/>
+                                            <rect key="frame" x="72" y="10" width="205" height="18"/>
                                             <fontDescription key="fontDescription" name="MyriadPro-Bold" family="Myriad Pro" pointSize="18"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UTV-ss-AtV">
+                                            <rect key="frame" x="72" y="35" width="207" height="14"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="5" id="iX6-Bh-ZwD"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="14"/>
+                                            <color key="textColor" red="0.38431372549019605" green="0.41176470588235292" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -357,15 +368,19 @@
                                         <constraint firstAttribute="trailing" secondItem="kNG-q0-f6e" secondAttribute="trailing" constant="8" id="9S4-3d-7gS"/>
                                         <constraint firstItem="YR3-Nh-pcn" firstAttribute="top" secondItem="5sJ-9O-niX" secondAttribute="top" constant="7" id="Bss-in-k2a"/>
                                         <constraint firstItem="kNG-q0-f6e" firstAttribute="leading" secondItem="YR3-Nh-pcn" secondAttribute="trailing" constant="10" id="CEt-rR-gpx"/>
+                                        <constraint firstItem="UTV-ss-AtV" firstAttribute="top" secondItem="jZ5-Zu-GPo" secondAttribute="bottom" constant="7" id="G94-i7-igL"/>
+                                        <constraint firstItem="UTV-ss-AtV" firstAttribute="leading" secondItem="YR3-Nh-pcn" secondAttribute="trailing" constant="10" id="IQN-lh-D1x"/>
+                                        <constraint firstAttribute="trailing" secondItem="UTV-ss-AtV" secondAttribute="trailing" constant="8" id="L8V-yC-1jE"/>
                                         <constraint firstAttribute="trailing" secondItem="jZ5-Zu-GPo" secondAttribute="trailing" constant="10" id="apX-Ru-YWt"/>
-                                        <constraint firstItem="jZ5-Zu-GPo" firstAttribute="top" secondItem="5sJ-9O-niX" secondAttribute="top" constant="16" id="iSj-ot-UCI"/>
-                                        <constraint firstItem="kNG-q0-f6e" firstAttribute="top" secondItem="jZ5-Zu-GPo" secondAttribute="bottom" constant="8" id="pXO-MR-BfA"/>
+                                        <constraint firstItem="kNG-q0-f6e" firstAttribute="top" secondItem="UTV-ss-AtV" secondAttribute="bottom" id="fN8-Wk-xBk"/>
+                                        <constraint firstItem="jZ5-Zu-GPo" firstAttribute="top" secondItem="5sJ-9O-niX" secondAttribute="top" constant="10" id="iSj-ot-UCI"/>
                                         <constraint firstItem="YR3-Nh-pcn" firstAttribute="leading" secondItem="5sJ-9O-niX" secondAttribute="leading" constant="8" id="qdz-Tq-uCE"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="0.20392156859999999" green="0.21960784310000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <connections>
+                                    <outlet property="partyAddressLabel" destination="UTV-ss-AtV" id="wsr-Wh-PBJ"/>
                                     <outlet property="partyDateLabel" destination="kNG-q0-f6e" id="ee5-99-kef"/>
                                     <outlet property="partyNameLabel" destination="jZ5-Zu-GPo" id="f0B-g3-5Cb"/>
                                     <outlet property="patryTypeImage" destination="YR3-Nh-pcn" id="PTN-tJ-lVR"/>
@@ -686,7 +701,7 @@
                                         <rect key="frame" x="64" y="336" width="192" height="124"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nnd-S3-yCU">
-                                                <rect key="frame" x="0.0" y="0.0" width="192" height="37"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="192" height="36"/>
                                                 <color key="backgroundColor" red="0.15686274510000001" green="0.51764705879999995" blue="0.68627450980000004" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="46" id="0ta-IQ-WwW"/>
@@ -705,9 +720,12 @@
                                                         <exclude reference="0ta-IQ-WwW"/>
                                                     </mask>
                                                 </variation>
+                                                <connections>
+                                                    <segue destination="f9o-q5-Aer" kind="show" identifier="ChooseLocationSegue" id="HdK-k8-BuR"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CyR-54-Kt7">
-                                                <rect key="frame" x="0.0" y="45" width="192" height="35"/>
+                                                <rect key="frame" x="0.0" y="44" width="192" height="36"/>
                                                 <color key="backgroundColor" red="0.54901960780000003" green="0.72941176470000002" blue="0.1137254902" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="46" id="cbp-WW-lwo"/>
@@ -732,7 +750,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fnb-FM-n72">
-                                                <rect key="frame" x="0.0" y="88" width="192" height="37"/>
+                                                <rect key="frame" x="0.0" y="88" width="192" height="36"/>
                                                 <color key="backgroundColor" red="0.92549019610000005" green="0.2784313725" blue="0.074509803920000006" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="46" id="w4S-cK-aUD"/>
@@ -800,7 +818,9 @@
                             <constraint firstAttribute="trailing" secondItem="cAi-q8-Ox1" secondAttribute="trailing" id="ulh-Pr-kDw"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="PARTY INFO" id="jwA-qb-gLT"/>
+                    <navigationItem key="navigationItem" title="PARTY INFO" id="jwA-qb-gLT">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="u5H-XA-z63"/>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="deleteButton" destination="fnb-FM-n72" id="jOY-o4-D1J"/>
@@ -1097,6 +1117,7 @@
                                 <connections>
                                     <action selector="actionChooseLocation:" destination="GDM-a4-Iq0" eventType="touchUpInside" id="sb6-Xa-58n"/>
                                     <action selector="actionMoveCursor:" destination="GDM-a4-Iq0" eventType="touchDown" id="cDE-3q-pu1"/>
+                                    <segue destination="f9o-q5-Aer" kind="show" identifier="ChooseLocationSegue" id="ZzH-Vn-0iw"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOCATION" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e97-Bm-Z8V">
@@ -1239,7 +1260,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="CREATE PARTY" id="o96-ax-zNB">
-                        <barButtonItem key="backBarButtonItem" title="Cancel" id="3Tt-Ns-9ad"/>
+                        <barButtonItem key="backBarButtonItem" title="Back" id="3Tt-Ns-9ad"/>
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="iK8-Fr-Nde">
                             <color key="tintColor" red="0.13725490200000001" green="0.1450980392" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
@@ -1256,6 +1277,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="chooseButton" destination="hsF-8K-sc2" id="XTv-gU-5aw"/>
+                        <outlet property="chooseLocation" destination="zbf-y8-6w5" id="RoF-TX-zcC"/>
                         <outlet property="cursorTopConstraint" destination="yhw-Vd-aNu" id="eUU-qR-aEu"/>
                         <outlet property="cursorView" destination="EHI-7t-thD" id="rcn-NG-1Xd"/>
                         <outlet property="endSlider" destination="X78-a5-csn" id="a4y-m4-Wla"/>
@@ -1272,7 +1294,7 @@
             </objects>
             <point key="canvasLocation" x="2121" y="186"/>
         </scene>
-        <!--Map View Controller-->
+        <!--CHOOSE PARTY LOCATION-->
         <scene sceneID="xpb-aA-hHE">
             <objects>
                 <viewController storyboardIdentifier="PAMMapViewController" id="f9o-q5-Aer" customClass="PAMMapViewController" sceneMemberID="viewController">
@@ -1281,11 +1303,11 @@
                         <viewControllerLayoutGuide type="bottom" id="yS8-5a-xUp"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Dml-Fs-hSh">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TiD-VR-pPe">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
                                 <connections>
                                     <outlet property="delegate" destination="f9o-q5-Aer" id="G4v-pk-aFG"/>
                                 </connections>
@@ -1299,6 +1321,7 @@
                             <constraint firstAttribute="trailing" secondItem="TiD-VR-pPe" secondAttribute="trailing" id="zAr-aC-RfT"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="CHOOSE PARTY LOCATION" id="7Em-Mw-hbr"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="mapView" destination="TiD-VR-pPe" id="lqn-KJ-TeN"/>
@@ -1317,6 +1340,7 @@
         <image name="TimePopup180" width="40" height="31"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="qbr-R4-MAy"/>
+        <segue reference="HdK-k8-BuR"/>
+        <segue reference="my3-fR-KBg"/>
     </inferredMetricsTieBreakers>
 </document>
