--- a/PartyMaker/Base.lproj/Main.storyboard
+++ b/PartyMaker/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jq1-Zj-42t">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jq1-Zj-42t">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -73,8 +73,8 @@
                         </userDefinedRuntimeAttributes>
                     </tabBar>
                     <connections>
-                        <segue destination="fxZ-PF-dx5" kind="relationship" relationship="viewControllers" id="2M5-5G-rWB"/>
                         <segue destination="IBb-MJ-NjN" kind="relationship" relationship="viewControllers" id="M9o-bf-Gtc"/>
+                        <segue destination="fxZ-PF-dx5" kind="relationship" relationship="viewControllers" id="2M5-5G-rWB"/>
                         <segue destination="OaN-5u-znx" kind="relationship" relationship="viewControllers" id="zKc-bp-QDs"/>
                     </connections>
                 </tabBarController>
@@ -353,7 +353,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Party Maker 2016(c) Version: 1.0 (1) " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMJ-iN-OtG">
-                                                <rect key="frame" x="39" y="101.5" width="180" height="40"/>
+                                                <rect key="frame" x="39" y="102" width="180" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="180" id="hdQ-PL-CPu"/>
                                                     <constraint firstAttribute="height" constant="40" id="q5U-dM-Nfq"/>
@@ -363,7 +363,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Developed for        Softheme IOS Internship 2016                                           by Petrov Anton" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PND-fZ-kCz">
-                                                <rect key="frame" x="39" y="177.5" width="180" height="68"/>
+                                                <rect key="frame" x="39" y="178" width="180" height="68"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="68" id="dID-N4-mbd"/>
                                                     <constraint firstAttribute="height" constant="68" id="gMQ-q0-8oh"/>
@@ -447,7 +447,7 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" tableViewCell="IIp-5o-i9w" id="5sJ-9O-niX">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="69.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="69"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YR3-Nh-pcn">
@@ -814,7 +814,7 @@
                                         <rect key="frame" x="64" y="336" width="192" height="124"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nnd-S3-yCU">
-                                                <rect key="frame" x="0.0" y="0.0" width="192" height="37"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="192" height="36"/>
                                                 <color key="backgroundColor" red="0.15686274510000001" green="0.51764705879999995" blue="0.68627450980000004" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="46" id="0ta-IQ-WwW"/>
@@ -838,7 +838,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CyR-54-Kt7">
-                                                <rect key="frame" x="0.0" y="45" width="192" height="35"/>
+                                                <rect key="frame" x="0.0" y="44" width="192" height="36"/>
                                                 <color key="backgroundColor" red="0.54901960780000003" green="0.72941176470000002" blue="0.1137254902" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="46" id="cbp-WW-lwo"/>
@@ -863,7 +863,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fnb-FM-n72">
-                                                <rect key="frame" x="0.0" y="88" width="192" height="37"/>
+                                                <rect key="frame" x="0.0" y="88" width="192" height="36"/>
                                                 <color key="backgroundColor" red="0.92549019610000005" green="0.2784313725" blue="0.074509803920000006" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="46" id="w4S-cK-aUD"/>
@@ -1458,11 +1458,11 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="40"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GaH-3H-KgO" id="VXh-ml-Q2N">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="39.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="39"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="m1x-e0-yOC">
-                                            <rect key="frame" x="15" y="10" width="39.5" height="20"/>
+                                            <rect key="frame" x="15" y="10" width="40" height="20"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="MyriadPro-Bold" family="Myriad Pro" pointSize="20"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -1498,10 +1498,10 @@
             </objects>
             <point key="canvasLocation" x="1336" y="862"/>
         </scene>
-        <!--Users Parties View Controller-->
+        <!--Map View Controller-->
         <scene sceneID="ApP-5m-R2h">
             <objects>
-                <viewController storyboardIdentifier="PAMUsersPartiesViewController" id="OH1-Y8-TJR" customClass="PAMUsersPartiesViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PAMMapUsersPartiesViewController" id="OH1-Y8-TJR" customClass="PAMMapViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ctQ-M4-dW4"/>
                         <viewControllerLayoutGuide type="bottom" id="ibq-CD-nN9"/>
@@ -1513,7 +1513,7 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="48x-cW-Itu">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
                                 <connections>
-                                    <outlet property="delegate" destination="OH1-Y8-TJR" id="CYN-Nu-dsk"/>
+                                    <outlet property="delegate" destination="OH1-Y8-TJR" id="VgE-c7-ucC"/>
                                 </connections>
                             </mapView>
                         </subviews>
@@ -1525,6 +1525,11 @@
                             <constraint firstItem="48x-cW-Itu" firstAttribute="leading" secondItem="QiT-ae-73j" secondAttribute="leading" id="olm-rd-Uv7"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="MHX-Ay-uSD">
+                        <barButtonItem key="rightBarButtonItem" title="Reset" id="Pom-v6-84f">
+                            <color key="tintColor" red="0.1215686275" green="0.1333333333" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="mapView" destination="48x-cW-Itu" id="wxp-kS-DhA"/>
@@ -1576,7 +1581,7 @@
         <image name="TimePopup180" width="40" height="31"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="qbr-R4-MAy"/>
+        <segue reference="my3-fR-KBg"/>
         <segue reference="HdK-k8-BuR"/>
     </inferredMetricsTieBreakers>
 </document>
